--- a/requirements.txt
+++ b/requirements.txt
@@ -1,143 +1,108 @@
-# This file may be used to create an environment using:
-# $ conda create --name <env> --file <this file>
-# platform: osx-64
-anyio=4.1.0=pypi_0
-appnope=0.1.3=pypi_0
-argon2-cffi=23.1.0=pypi_0
-argon2-cffi-bindings=21.2.0=pypi_0
-arrow=1.3.0=pypi_0
-asttokens=2.4.1=pypi_0
-async-lru=2.0.4=pypi_0
-attrs=23.1.0=pypi_0
-babel=2.14.0=pypi_0
-beautifulsoup4=4.12.2=pypi_0
-bleach=6.1.0=pypi_0
-bzip2=1.0.8=h10d778d_5
-ca-certificates=2023.11.17=h8857fd0_0
-certifi=2023.11.17=pypi_0
-cffi=1.16.0=pypi_0
-charset-normalizer=3.3.2=pypi_0
-comm=0.2.0=pypi_0
-contourpy=1.2.0=pypi_0
-cycler=0.12.1=pypi_0
-debugpy=1.8.0=pypi_0
-decorator=5.1.1=pypi_0
-defusedxml=0.7.1=pypi_0
-exceptiongroup=1.2.0=pypi_0
-executing=2.0.1=pypi_0
-fastjsonschema=2.19.0=pypi_0
-ffmpeg=4.2.2=h97e5cf8_0
-fonttools=4.46.0=pypi_0
-fqdn=1.5.1=pypi_0
-freetype=2.10.4=h4cff582_1
-gettext=0.21.1=h8a4c099_0
-gmp=6.1.2=h0a44026_1000
-gnutls=3.6.15=hed9c0bf_0
-idna=3.6=pypi_0
-importlib-metadata=7.0.0=pypi_0
-importlib-resources=6.1.1=pypi_0
-ipykernel=6.27.1=pypi_0
-ipython=8.18.1=pypi_0
-ipywidgets=8.1.1=pypi_0
-isoduration=20.11.0=pypi_0
-jedi=0.19.1=pypi_0
-jinja2=3.1.2=pypi_0
-json5=0.9.14=pypi_0
-jsonpointer=2.4=pypi_0
-jsonschema=4.20.0=pypi_0
-jsonschema-specifications=2023.11.2=pypi_0
-jupyter=1.0.0=pypi_0
-jupyter-client=8.6.0=pypi_0
-jupyter-console=6.6.3=pypi_0
-jupyter-core=5.5.0=pypi_0
-jupyter-events=0.9.0=pypi_0
-jupyter-lsp=2.2.1=pypi_0
-jupyter-server=2.12.1=pypi_0
-jupyter-server-terminals=0.5.0=pypi_0
-jupyterlab=4.0.9=pypi_0
-jupyterlab-pygments=0.3.0=pypi_0
-jupyterlab-server=2.25.2=pypi_0
-jupyterlab-widgets=3.0.9=pypi_0
-kiwisolver=1.4.5=pypi_0
-lame=3.100=hb7f2c08_1003
-libcxx=14.0.6=h9765a3e_0
-libffi=3.3=hb1e8313_2
-libiconv=1.17=hd75f5a5_1
-libidn2=2.3.4=hb7f2c08_0
-libopus=1.3.1=hc929b4f_1
-libpng=1.6.39=h6c40b1e_0
-libtasn1=4.19.0=hb7f2c08_0
-libunistring=0.9.10=h0d85af4_0
-libvpx=1.7.0=h378b8a2_0
-markupsafe=2.1.3=pypi_0
-matplotlib=3.8.2=pypi_0
-matplotlib-inline=0.1.6=pypi_0
-mistune=3.0.2=pypi_0
-nbclient=0.9.0=pypi_0
-nbconvert=7.12.0=pypi_0
-nbformat=5.9.2=pypi_0
-ncurses=6.4=hcec6c5f_0
-nest-asyncio=1.5.8=pypi_0
-nettle=3.7.3=h230ac6f_1
-notebook=7.0.6=pypi_0
-notebook-shim=0.2.3=pypi_0
-numpy=1.26.2=pypi_0
-openh264=2.1.1=h8346a28_0
-openssl=1.1.1w=h8a1eda9_0
-overrides=7.4.0=pypi_0
-packaging=23.2=pypi_0
-pandocfilters=1.5.0=pypi_0
-parso=0.8.3=pypi_0
-pexpect=4.9.0=pypi_0
-pillow=10.1.0=pypi_0
-pip=23.3.1=py39hecd8cb5_0
-platformdirs=4.1.0=pypi_0
-prometheus-client=0.19.0=pypi_0
-prompt-toolkit=3.0.42=pypi_0
-psutil=5.9.6=pypi_0
-ptyprocess=0.7.0=pypi_0
-pure-eval=0.2.2=pypi_0
-pycparser=2.21=pypi_0
-pygments=2.17.2=pypi_0
-pyparsing=3.1.1=pypi_0
-python=3.9.6=h88f2d9e_1
-python-dateutil=2.8.2=pypi_0
-python-json-logger=2.0.7=pypi_0
-pyyaml=6.0.1=pypi_0
-pyzmq=25.1.2=pypi_0
-qtconsole=5.5.1=pypi_0
-qtpy=2.4.1=pypi_0
-readline=8.2=hca72f7f_0
-referencing=0.32.0=pypi_0
-requests=2.31.0=pypi_0
-rfc3339-validator=0.1.4=pypi_0
-rfc3986-validator=0.1.1=pypi_0
-rpds-py=0.13.2=pypi_0
-send2trash=1.8.2=pypi_0
-setuptools=68.0.0=py39hecd8cb5_0
-six=1.16.0=pypi_0
-sniffio=1.3.0=pypi_0
-soupsieve=2.5=pypi_0
-sqlite=3.41.2=h6c40b1e_0
-stack-data=0.6.3=pypi_0
-terminado=0.18.0=pypi_0
-tinycss2=1.2.1=pypi_0
-tk=8.6.12=h5d9f67b_0
-tomli=2.0.1=pypi_0
-tornado=6.4=pypi_0
-traitlets=5.14.0=pypi_0
-types-python-dateutil=2.8.19.14=pypi_0
-typing-extensions=4.9.0=pypi_0
-tzdata=2023c=h04d1e81_0
-uri-template=1.3.0=pypi_0
-urllib3=2.1.0=pypi_0
-wcwidth=0.2.12=pypi_0
-webcolors=1.13=pypi_0
-webencodings=0.5.1=pypi_0
-websocket-client=1.7.0=pypi_0
-wheel=0.41.2=py39hecd8cb5_0
-widgetsnbextension=4.0.9=pypi_0
-x264=1!157.20191217=h1de35cc_0
-xz=5.4.5=h6c40b1e_0
-zipp=3.17.0=pypi_0
-zlib=1.2.13=h4dc903c_0
+anyio==4.1.0
+appnope==0.1.3
+argon2-cffi==23.1.0
+argon2-cffi-bindings==21.2.0
+arrow==1.3.0
+asttokens==2.4.1
+async-lru==2.0.4
+attrs==23.1.0
+Babel==2.14.0
+beautifulsoup4==4.12.2
+bleach==6.1.0
+certifi==2023.11.17
+cffi==1.16.0
+charset-normalizer==3.3.2
+comm==0.2.0
+contourpy==1.2.0
+cycler==0.12.1
+debugpy==1.8.0
+decorator==5.1.1
+defusedxml==0.7.1
+exceptiongroup==1.2.0
+executing==2.0.1
+fastjsonschema==2.19.0
+fonttools==4.46.0
+fqdn==1.5.1
+idna==3.6
+importlib-metadata==7.0.0
+importlib-resources==6.1.1
+ipykernel==6.27.1
+ipython==8.18.1
+ipywidgets==8.1.1
+isoduration==20.11.0
+jedi==0.19.1
+Jinja2==3.1.2
+json5==0.9.14
+jsonpointer==2.4
+jsonschema==4.20.0
+jsonschema-specifications==2023.11.2
+jupyter==1.0.0
+jupyter-console==6.6.3
+jupyter-events==0.9.0
+jupyter-lsp==2.2.1
+jupyter_client==8.6.0
+jupyter_core==5.5.0
+jupyter_server==2.12.1
+jupyter_server_terminals==0.5.0
+jupyterlab==4.0.9
+jupyterlab-widgets==3.0.9
+jupyterlab_pygments==0.3.0
+jupyterlab_server==2.25.2
+kiwisolver==1.4.5
+MarkupSafe==2.1.3
+matplotlib==3.8.2
+matplotlib-inline==0.1.6
+mistune==3.0.2
+nbclient==0.9.0
+nbconvert==7.12.0
+nbformat==5.9.2
+nest-asyncio==1.5.8
+notebook==7.0.6
+notebook_shim==0.2.3
+numpy==1.26.2
+overrides==7.4.0
+packaging==23.2
+pandocfilters==1.5.0
+parso==0.8.3
+pexpect==4.9.0
+Pillow==10.1.0
+platformdirs==4.1.0
+prometheus-client==0.19.0
+prompt-toolkit==3.0.42
+psutil==5.9.6
+ptyprocess==0.7.0
+pure-eval==0.2.2
+pycparser==2.21
+Pygments==2.17.2
+pyparsing==3.1.1
+python-dateutil==2.8.2
+python-json-logger==2.0.7
+PyYAML==6.0.1
+pyzmq==25.1.2
+qtconsole==5.5.1
+QtPy==2.4.1
+referencing==0.32.0
+requests==2.31.0
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
+rpds-py==0.13.2
+Send2Trash==1.8.2
+six==1.16.0
+sniffio==1.3.0
+soupsieve==2.5
+stack-data==0.6.3
+terminado==0.18.0
+tinycss2==1.2.1
+tomli==2.0.1
+tornado==6.4
+traitlets==5.14.0
+types-python-dateutil==2.8.19.14
+typing_extensions==4.9.0
+uri-template==1.3.0
+urllib3==2.1.0
+wcwidth==0.2.12
+webcolors==1.13
+webencodings==0.5.1
+websocket-client==1.7.0
+widgetsnbextension==4.0.9
+zipp==3.17.0
